--- a/Ecommerce/Areas/Admin/Views/Login/Index.cshtml
+++ b/Ecommerce/Areas/Admin/Views/Login/Index.cshtml
@@ -28,13 +28,13 @@
     <div class="login-box-body">
       <p class="login-box-msg">Sign in to start your session</p>
 
-      <form action="../../index2.html" method="post">
+      <form asp-area="admin" asp-controller="login" asp-action="proccess" method="post">
         <div class="form-group has-feedback">
-          <input type="text" class="form-control" placeholder="Username">
+          <input type="text" required="required" class="form-control" placeholder="Username" name="username">
           <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" required="required" class="form-control" placeholder="Password" name="password">
           <span class="glyphicon glyphicon-lock form-control-feedback"></span>
         </div>
         <div class="row">
