--- a/Ecommerce/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Ecommerce/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@using System.Security.Claims
+
+@{ 
+    var user = User.FindFirst(ClaimTypes.Name);
+}
 <!DOCTYPE html>
 <html>
 <head>
@@ -255,7 +259,7 @@
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <img src="~/admin/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                <span class="hidden-xs">Alexander Pierce</span>
+                <span class="hidden-xs">@user.Value</span>
               </a>
               <ul class="dropdown-menu">
                 <!-- User image -->
@@ -263,32 +267,18 @@
                   <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                   <p>
-                    Alexander Pierce - Web Developer
-                    <small>Member since Nov. 2012</small>
+                    @user.Value
                   </p>
                 </li>
-                <!-- Menu Body -->
-                <li class="user-body">
-                  <div class="row">
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Followers</a>
-                    </div>
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Sales</a>
-                    </div>
-                    <div class="col-xs-4 text-center">
-                      <a href="#">Friends</a>
-                    </div>
-                  </div>
-                  <!-- /.row -->
-                </li>
+               
                 <!-- Menu Footer-->
                 <li class="user-footer">
                   <div class="pull-left">
-                    <a href="#" class="btn btn-default btn-flat">Profile</a>
+                    <a asp-area="admin" asp-controller="login" asp-action="profile" class="btn btn-default btn-flat">Profile</a>
                   </div>
                   <div class="pull-right">
-                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                    <a asp-area="admin" asp-controller="login" asp-action="signout" class="btn btn-default btn-flat">Sign out</a>
+
                   </div>
                 </li>
               </ul>
