--- a/Ecommerce/Views/Shared/_UserLayout.cshtml
+++ b/Ecommerce/Views/Shared/_UserLayout.cshtml
@@ -48,18 +48,8 @@
         </a>
         <div class="navbar-inner">
           <a class="brand" href="index.html"><img src="~/user/themes/images/logo.png" alt="Bootsshop" /></a>
-          <form class="form-inline navbar-search" method="post" action="products.html">
-            <input id="srchFld" class="srchTxt" type="text" />
-            <select class="srchTxt">
-              <option>All</option>
-              <option>CLOTHES </option>
-              <option>FOOD AND BEVERAGES </option>
-              <option>HEALTH & BEAUTY </option>
-              <option>SPORTS & LEISURE </option>
-              <option>BOOKS & ENTERTAINMENTS </option>
-            </select>
-            <button type="submit" id="submitButton" class="btn btn-primary">Go</button>
-          </form>
+          
+          @await Component.InvokeAsync("Search")
           <ul id="topMenu" class="nav pull-right">
             <li class=""><a href="special_offer.html">Specials Offer</a></li>
             <li class=""><a href="normal.html">Delivery</a></li>
