--- a/Ecommerce/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Ecommerce/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -311,6 +311,19 @@
             </ul>
           </li>
 
+          <li class="treeview">
+            <a href="#">
+              <i class="fa fa-folder"></i> <span>SlideShow</span>
+              <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+              </span>
+            </a>
+            <ul class="treeview-menu">
+              <li><a asp-area="admin" asp-controller="slideshow" asp-action="add"><i class="fa fa-circle-o"></i> Add</a></li>
+              <li><a asp-area="admin" asp-controller="slideshow" asp-action="index"><i class="fa fa-circle-o"></i> List</a></li>
+            </ul>
+          </li>
+
           <li class="header">LABELS</li>
           <li><a href="https://adminlte.io/docs"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
         </ul>
