--- a/Ecommerce/Areas/Admin/Views/SlideShow/Edit.cshtml
+++ b/Ecommerce/Areas/Admin/Views/SlideShow/Edit.cshtml
@@ -1,5 +1,58 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
+  ViewData["Title"] = "Index";
+  Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
+
+@model Ecommerce.Models.SlideShow
+<section class="content-header">
+  <h1>
+    Edit SlideShow
+  </h1>
+
+</section>
+
+<section class="content">
+  <div class="row">
+    <div class="col-xl-12">
+
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title"> SlideShow Information</h3>
+        </div>
+        <!-- /.box-header -->
+        <!-- form start -->
+        <form method="post" asp-area="admin" asp-controller="slideshow" asp-action="edit" enctype="multipart/form-data">
+          <div class="box-body">
+            <<div class="form-group">
+              <label for="exampleInputFile">photo</label>
+              <input type="file" id="exampleInputFile" name="photo" accept="image/*">
+              <br />
+              <img src="~/slideshows/@Model.Name" width="120" alt="Alternate Text" />
+            </div>
+            <div class="form-group">
+              <label for="name">Description</label>
+              <input type="text" class="form-control" id="name" asp-for="Name" placeholder="Enter Name" required="required">
+            </div>
+
+            <div class="form-group">
+              <label for="name">Description</label>
+              <textarea class="form-control" rows="3" asp-for="Description"></textarea>
+            </div>
+
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" asp-for="Status"> Status
+              </label>
+            </div>
+          </div>
+          <!-- /.box-body -->
+          <div class="box-footer">
+            <button type="submit" class="btn btn-primary">Save</button>
+            <input type="hidden" asp-for="Id" />
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
