--- a/Ecommerce/Areas/Admin/Views/SlideShow/Index.cshtml
+++ b/Ecommerce/Areas/Admin/Views/SlideShow/Index.cshtml
@@ -1,5 +1,74 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
+  ViewData["Title"] = "Index";
+  Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
+
+<section class="content-header">
+  <h1>
+    SlideShow List
+  </h1>
+
+</section>
+
+<section class="content">
+  <div class="row">
+    <div class="col-xl-12">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">SlideShow List</h3>
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+          <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
+            <div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row">
+              <div class="col-sm-12">
+                <table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
+                  <thead>
+                    <tr>
+                      <th>Id</th>
+                      <th>Photo</th>
+                      <th>Title</th>
+                      <th>Description</th>
+                      <th>Status</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    @foreach (var slideShow in ViewBag.SlideShows)
+                    {
+                    <tr>
+                      <td>@slideShow.Id</td>
+                      <td>
+                        <img src="~/slideshows/@slideShow.Name" width="120" alt="Alternate Text" />
+                      <td>
+                      <td>@slideShow.Title</td>
+                      <td>@slideShow.Description</td>
+                      <td>@slideShow.Status ? "Show" : "Hide"</td>
+                      <td>
+                        <a asp-area="admin" asp-controller="slideshow" asp-action="edit" asp-route-id="@slideShow.Id">Edit </a> |
+                        <a asp-area="admin" asp-controller="slideshow" asp-action="delete" asp-route-id="@slideShow.Id" onclick="return confirm('Are you sure?')">Delete </a>
+                      </td>
+                    </tr>
+                    }
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <th>Id</th>
+                      <th>Photo</th>
+                      <th>Title</th>
+                      <th>Description</th>
+                      <th>Status</th>
+                      <th>Action</th>
+                    </tr>
+                  </tfoot>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /.box-body -->
+      </div>
+    </div>
+  </div>
+</section>
