--- a/Ecommerce/Areas/Admin/Views/Category/Index.cshtml
+++ b/Ecommerce/Areas/Admin/Views/Category/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
         <!-- /.box-header -->
         <div class="box-body">
-          <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
+          <div id="category" class="dataTables_wrapper form-inline dt-bootstrap">
             <div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row">
               <div class="col-sm-12">
                 <table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
@@ -87,3 +87,16 @@
     </div>
   </div>
 </section>
+
+<script>
+  $(function) {
+    $('#category').DataTable({
+      'paging': true,
+      'lengthChange': false,
+      'searching': false,
+      'ordering': true,
+      'info': true,
+      'autoWidth': false
+    })
+  }
+</script>
